Fixed issue where images were stretched
Re-took screenshots of each website. This resulted in an issue
with the Bootstrap columns. The second row of the portfolio became
askew which is why the layout was switched to lg-4 instead of 6.
ALso fixed typos in project and about me descriptions

--- a/css/creative.css
+++ b/css/creative.css
@@ -230,7 +230,6 @@ header .header-content .header-content-inner p {
   display: block;
   max-width: 650px;
   margin: 0 auto 10px;
-  width: 95%
 }
 
 .portfolio-box .portfolio-box-caption {
@@ -488,4 +487,9 @@ body {
 .phone {
   color: #20A39C;
 }
-\
+
+.roadie {
+  display: inline-block;
+  float: left;
+  margin-top: -24%;
+}
